crates/kreuzberg-ffi/include/kreuzberg.h

#ifndef KREUZBERG_H
#define KREUZBERG_H

#pragma once

/* This file is auto-generated by alef. DO NOT EDIT. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
/* Opaque type forward declarations */
typedef struct KREUZBERGLlmUsage KREUZBERGLlmUsage;
typedef struct KREUZBERGSupportedFormat KREUZBERGSupportedFormat;


/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t kreuzberg_last_error_code(void);

/**
 * Return the last error message. The pointer is valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
const char *kreuzberg_last_error_context(void);

/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void kreuzberg_free_string(char *ptr);

/**
 * Return the library version string. The pointer is static and must NOT be freed.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
const char *kreuzberg_version(void);

/**
 * Create a `SupportedFormat` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `kreuzberg_supported_format_free`.
 */
KREUZBERGSupportedFormat *kreuzberg_supported_format_from_json(const char *json);

/**
 * Serialize a `SupportedFormat` to a JSON string. Returns null on failure.
 * # Safety
 * `ptr` must be a valid, non-null pointer returned by a `kreuzberg` function.
 * The returned string must be freed with `kreuzberg_free_string`.
 */
char *kreuzberg_supported_format_to_json(const KREUZBERGSupportedFormat *ptr);

/**
 * Free a `SupportedFormat` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void kreuzberg_supported_format_free(KREUZBERGSupportedFormat *ptr);

/**
 * Get the `extension` field from a `SupportedFormat`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
char *kreuzberg_supported_format_extension(const KREUZBERGSupportedFormat *ptr);

/**
 * Get the `mime_type` field from a `SupportedFormat`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
char *kreuzberg_supported_format_mime_type(const KREUZBERGSupportedFormat *ptr);

/**
 * Create a `LlmUsage` from a JSON string. Returns null on failure.
 * # Safety
 * JSON string must be valid UTF-8 and null-terminated.
 * Returned handle must be freed with `kreuzberg_llm_usage_free`.
 */
KREUZBERGLlmUsage *kreuzberg_llm_usage_from_json(const char *json);

/**
 * Serialize a `LlmUsage` to a JSON string. Returns null on failure.
 * # Safety
 * `ptr` must be a valid, non-null pointer returned by a `kreuzberg` function.
 * The returned string must be freed with `kreuzberg_free_string`.
 */
char *kreuzberg_llm_usage_to_json(const KREUZBERGLlmUsage *ptr);

/**
 * Free a `LlmUsage` handle.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void kreuzberg_llm_usage_free(KREUZBERGLlmUsage *ptr);

/**
 * Get the `model` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
char *kreuzberg_llm_usage_model(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `source` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
char *kreuzberg_llm_usage_source(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `input_tokens` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
uint64_t kreuzberg_llm_usage_input_tokens(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `output_tokens` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
uint64_t kreuzberg_llm_usage_output_tokens(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `total_tokens` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
uint64_t kreuzberg_llm_usage_total_tokens(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `estimated_cost` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
double kreuzberg_llm_usage_estimated_cost(const KREUZBERGLlmUsage *ptr);

/**
 * Get the `finish_reason` field from a `LlmUsage`.
 * # Safety
 * Pointer must be a valid handle returned by this library.
 */
char *kreuzberg_llm_usage_finish_reason(const KREUZBERGLlmUsage *ptr);

/**
 * Validates whether a field name is in the known formats registry.
 *
 * This uses a pre-built hash set for O(1) lookups instead of linear search,
 * providing significant performance improvements for repeated validations.
 *
 * # Arguments
 *
 * * `field` - The field name to validate
 *
 * # Returns
 *
 * `true` if the field is in KNOWN_FORMATS, `false` otherwise.
 *
 * # Example
 *
 * ```rust
 * use kreuzberg::core::formats::is_valid_format_field;
 *
 * assert!(is_valid_format_field("title"));
 * assert!(is_valid_format_field("creation_date"));
 * assert!(!is_valid_format_field("invalid_field"));
 * ```
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t kreuzberg_is_valid_format_field(const char *field);

/**
 * Detect MIME type from a file path.
 *
 * Uses file extension to determine MIME type. Falls back to `mime_guess` crate
 * if extension-based detection fails.
 *
 * # Arguments
 *
 * * `path` - Path to the file
 * * `check_exists` - Whether to verify file existence
 *
 * # Returns
 *
 * The detected MIME type string.
 *
 * # Errors
 *
 * Returns `KreuzbergError::Io` if file doesn't exist (when `check_exists` is true).
 * Returns `KreuzbergError::UnsupportedFormat` if MIME type cannot be determined.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kreuzberg_detect_mime_type(const char *_path,
                                 int32_t _check_exists);

/**
 * Validate that a MIME type is supported.
 *
 * # Arguments
 *
 * * `mime_type` - The MIME type to validate
 *
 * # Returns
 *
 * The validated MIME type (may be normalized).
 *
 * # Errors
 *
 * Returns `KreuzbergError::UnsupportedFormat` if not supported.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kreuzberg_validate_mime_type(const char *mime_type);

/**
 * Detect MIME type from raw file bytes.
 *
 * Uses magic byte signatures to detect file type from content.
 * Falls back to `infer` crate for comprehensive detection.
 *
 * For ZIP-based files, inspects contents to distinguish Office Open XML
 * formats (DOCX, XLSX, PPTX) from plain ZIP archives.
 *
 * # Arguments
 *
 * * `content` - Raw file bytes
 *
 * # Returns
 *
 * The detected MIME type string.
 *
 * # Errors
 *
 * Returns `KreuzbergError::UnsupportedFormat` if MIME type cannot be determined.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kreuzberg_detect_mime_type_from_bytes(const uint8_t *content,
                                            uintptr_t content_len);

/**
 * Get file extensions for a given MIME type.
 *
 * Returns all known file extensions that map to the specified MIME type.
 *
 * # Arguments
 *
 * * `mime_type` - The MIME type to look up
 *
 * # Returns
 *
 * A vector of file extensions (without leading dot) for the MIME type.
 *
 * # Example
 *
 * ```
 * use kreuzberg::core::mime::get_extensions_for_mime;
 *
 * let extensions = get_extensions_for_mime("application/pdf").unwrap();
 * assert_eq!(extensions, vec!["pdf"]);
 *
 * let doc_extensions = get_extensions_for_mime("application/vnd.openxmlformats-officedocument.wordprocessingml.document").unwrap();
 * assert!(doc_extensions.contains(&"docx".to_string()));
 * ```
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kreuzberg_get_extensions_for_mime(const char *mime_type);

/**
 * List all supported document formats.
 *
 * Returns a list of all file extensions and their corresponding MIME types
 * that Kreuzberg can process. Derived from the centralized [`FORMATS`] registry.
 *
 * The list is sorted alphabetically by file extension.
 *
 * # Example
 *
 * ```
 * use kreuzberg::core::mime::list_supported_formats;
 *
 * let formats = list_supported_formats();
 * assert!(!formats.is_empty());
 * assert!(formats.iter().any(|f| f.extension == "pdf"));
 * ```
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kreuzberg_list_supported_formats(void);

#endif  /* KREUZBERG_H */