packages/csharp/src/Kreuzberg/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
using System.Runtime.InteropServices;

namespace Kreuzberg;

internal static partial class NativeMethods
{
    private const string LibName = "kreuzberg_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_is_valid_format_field")]
    internal static extern int IsValidFormatField(
        [MarshalAs(UnmanagedType.LPStr)] string field
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_mime_type")]
    internal static extern IntPtr DetectMimeType(
        [MarshalAs(UnmanagedType.LPStr)] string path,
        int checkExists
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_validate_mime_type")]
    internal static extern IntPtr ValidateMimeType(
        [MarshalAs(UnmanagedType.LPStr)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_mime_type_from_bytes")]
    internal static extern IntPtr DetectMimeTypeFromBytes(
        IntPtr content
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_extensions_for_mime")]
    internal static extern IntPtr GetExtensionsForMime(
        [MarshalAs(UnmanagedType.LPStr)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_supported_formats")]
    internal static extern IntPtr ListSupportedFormats();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_free_string")]
    internal static extern void FreeString(IntPtr ptr);
}
